# epic-continuum

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PROJECT_CHARTER.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: GLOSSARY.md  HARDWARE_TIERS.md  ORIGINAL_DESIGN_COVERAGE_2026-06-17.md  configuration.md
docs/architecture/: 0001-standalone-memory-substrate.md  0002-roles-and-queues.md  0003-storage-formats.md  0004-hardware-budgets.md
docs/audits/: MAINTAINABILITY_HOTSPOTS.md  RELEASE_AUDIT_SUMMARY.md
docs/integrations/: adapter-kit.md  codex-plugin.md  hermes-adapter.md
examples/: quickstart.ps1
integrations/: adapter-index.json
integrations/autogen/: README.md
integrations/claude-code/: README.md
integrations/crewai/: README.md
integrations/haystack/: README.md
integrations/langchain/: README.md
integrations/llamaindex/: README.md
integrations/mcp-generic/: README.md  mcp-server.example.json
integrations/ollama/: README.md
integrations/openai-compatible/: README.md
scripts/: build_release_package.py  install_codex_plugin.ps1  install_codex_plugin.sh  install_hermes_adapter.ps1  install_hermes_adapter.sh  stage_codex_plugin.py
tests/: test_adapter_kit.py  test_bundle.py  test_config.py  test_core_flows.py  test_hardware.py  test_hermes_adapter.py  test_mcp_server.py  test_mempalace_import.py  test_operations.py  test_release_hardening.py  test_safety.py  test_smoke.py  test_workers_and_memory_design.py
(+49 files in other folders)
